--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       max-parallel: 1
       matrix:
-        target: [web, worker, beat]
+        target: [web, worker]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
