--- a/compose.yaml
+++ b/compose.yaml
@@ -37,6 +37,8 @@ services:
         required: false
       - path: docker.env
         required: true
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   ollama:
     image: alpine/ollama
