--- a/.github/workflows/full-stack-test.yaml
+++ b/.github/workflows/full-stack-test.yaml
@@ -59,7 +59,7 @@ jobs:
             echo "ROOT_LOG_LEVEL=DEBUG"
             echo "SECRET_KEY=$(openssl rand -hex 50)"
             echo "SECURE_SSL_REDIRECT="
-            echo "WEBHOOK_URL=http://172.17.0.1:8434"
+            echo "WEBHOOK_URL=http://host-gateway:8434"
           } > .env
       - name: Start the stack
         run: docker compose up --detach
