--- a/.github/workflows/full-stack-test.yaml
+++ b/.github/workflows/full-stack-test.yaml
@@ -66,6 +66,7 @@ jobs:
       - name: Run tests
         timeout-minutes: 1
         run: |
+          set -ex
           EXPECTED_JOB=$(curl http://localhost:11435/api/generate -d '{"model": "llama3.2", "prompt": "Why is the sky blue?"}' | jq ".job" -r)
           while true
           do
